# sellers-after-sales

./: README.md  pyproject.toml
app/: database.py  log_conf.py  main.py  models.py  pika_client.py  router.py  schema.py  teste.sql
docker/: Dockerfile  docker-compose.yml  teste
docker/db/: Dockerfile
migration/: sellerdb.sql
tests/: fixtures.py  test_app.py  test_sellers_after_sales.py
